--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src='js/services.js'></script>
+  <script src="js/storageService.js"></script>
   <script src="lib/chart.js/dist/Chart.js"></script>
   <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
   <script src="https://rawgit.com/fraserxu/ionic-rating/master/ionic-rating.min.js"></script>
